added activemq test cases

--- a/cameljmsCxfExample/src/main/resources/log4j.properties
+++ b/cameljmsCxfExample/src/main/resources/log4j.properties
@@ -4,11 +4,11 @@
 log4j.rootLogger=INFO, out,file
 
 # uncomment the following line to turn on Camel debugging
-log4j.logger.org.apache.camel=DEBUG
-log4j.logger.org.apache.camel.component.cxf=TRACE
-log4j.logger.org.apache.camel.util.AsyncProcessorHelper=TRACE
-log4j.logger.org.apache.cxf=TRACE
-log4j.logger.org.apache.http=DEBUG
+#log4j.logger.org.apache.camel=DEBUG
+#log4j.logger.org.apache.camel.component.cxf=TRACE
+#log4j.logger.org.apache.camel.util.AsyncProcessorHelper=TRACE
+#log4j.logger.org.apache.cxf=TRACE
+#log4j.logger.org.apache.http=DEBUG
 
 
 log4j.logger.org.springframework=WARN
