--- a/camel-spring-salesforce/src/main/resources/salesforceconfig.properties
+++ b/camel-spring-salesforce/src/main/resources/salesforceconfig.properties
@@ -14,7 +14,8 @@ loginUrl=https://login.salesforce.com
 clientId=3MVG9ZL0ppGP5UrBeyeG7Hoqgl4A.BzKD1b3xoX6eqc2AE5smmPwFzebj6_NX_AM0TvWtYzgwQID_9qvtSnOK
 clientSecret=1851731235796242942
 userName=xiaohui_wu@163.com
-password=Redhat1!
+#password=Redhat1!
+password=Redhat2!
 sObjectDTOPackages=org/apache/camel/salesforce/dto
 sObjectName=Account
 sObjectClass=org.apache.camel.salesforce.dto.Account.class
