--- a/amq/java/src/main/resources/jndi.properties
+++ b/amq/java/src/main/resources/jndi.properties
@@ -14,3 +14,5 @@ java.naming.provider.url = tcp://127.0.0.1:61616
 #
 connectionFactoryNames = myJmsFactory
 queue.queue/simple = test.queue.simple2
+queue/exampleQueue = test.queue.simple
+queue/deadLetterQueue = DLQ.test.queue.simple
