--- a/activemq-blueprint/pom.xml
+++ b/activemq-blueprint/pom.xml
@@ -63,6 +63,11 @@
       <version>2.15.1.redhat-621084</version>
       <scope>test</scope>
     </dependency>
+        <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jetty</artifactId>
+      <version>2.15.1.redhat-621084</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
